Completando el background del login

--- a/css/styles.css
+++ b/css/styles.css
@@ -7,4 +7,17 @@
     padding: 0px 30px;
     min-height: calc(130vh - 272px);
 }
+.login__container {
+    background-color: rgba(255,255,255,0.2);
+    border: 2px solid white;
+    border-radius: 15px;
+    color: white;
+    padding: 60px 60px 45px;
+    min-height: 350px;
+    width: 350px;
+    display: flex;
+    justify-content: space-evenly;
+    flex-direction: column;
+}
+
 
