--- a/css/styles.css
+++ b/css/styles.css
@@ -13,11 +13,33 @@
     border-radius: 15px;
     color: white;
     padding: 60px 60px 45px;
-    min-height: 350px;
-    width: 350px;
+    min-height: 400px;
+    width: 400px;
     display: flex;
     justify-content: space-evenly;
     flex-direction: column;
 }
-
-
+.login__container--form {
+    display: flex;
+    flex-direction: column;
+}
+.input {
+    background-color: transparent;
+    border-left: 0px;
+    border-top: 0px;
+    border-right: 0px;
+    border-bottom: 2px solid white;
+    font-size: 18px;
+    height: 40px;
+    margin-bottom: 20px;
+    padding: 0px 20px;
+    outline: none;
+}
+::placeholder {
+    color: white
+}
+.button {
+    font-size: 20px;
+    letter-spacing: .5px;
+    margin-top: 10px;
+}
